# stenotype

./: .buildinfo  .coveragerc  .gitignore  .gitlab-ci.yml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.rst  TOOLING.rst  cli.html  genindex.html  index.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  syntax.html  tooling.html
.doctrees/: cli.doctree  environment.pickle  index.doctree  syntax.doctree  tooling.doctree
.doctrees/autodoc/: stenotype.backend.doctree  stenotype.doctree
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflow/: cabbage.yml
.github/workflows/: CI-CD.yml  cabbage.yml
404/: index.html
_modules/: index.html  typing.html
_modules/stenotype/: util.html
_modules/stenotype/backend/: elements.html  grammar.html  parser.html  steno.html  typing.html
_modules/stenotype/util/: index.html
_sources/: index.rst.txt  syntax.rst.txt  tooling.rst.txt
_sources/autodoc/: stenotype.backend.rst.txt  stenotype.rst.txt
_static/: documentation_options.js
autodoc/: stenotype.backend.html  stenotype.html
autodoc/stenotype/: index.html
docs/: cli.rst  conf.py  index.rst  syntax.rst
genindex/: index.html
py-modindex/: index.html
search/: index.html
src/stenotype/: cli.py  util.py
src/stenotype/backend/: elements.py  grammar.py  parser.py  steno.py  typing.py
syntax/: index.html
tests/: conftest.py  test_cli.py  test_util.py
tests/backend/: test_grammar.py  test_steno.py  test_typing.py
