[tool.poetry]
name = "stenotype"
version = "0.1.0"
description = "Support for shorthand type annotations."
license = "MIT"
authors = ["Arne Recknagel <arne.recknagel@hotmail.com>"]
readme = "README.rst"
repository = "https://github.com/a-recknagel/stenotype"
keywords = ["typing","annotation"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-sugar = "^0.9.2"
pytest-cov = "^2.6"
mypy = "^0.670.0"
safety = "^1.8"
bandit = "^1.5"
sphinx = "^2.0"
sphinx-click = "^2.1"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
Pallets-Sphinx-Themes = "^1.2"
sphinxcontrib-contentui = "^0.2.4"

[tool.black]
target-version = ["py36"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
