[tool.poetry]
name = "stenotype"
version = "0.2.0"
description = "Support for shorthand type annotations."
license = "MIT"
authors = [
    "Arne Recknagel <arne.recknagel@hotmail.com>",
    "Max Fischer <maxfischer2781@gmail.com>"
]
readme = "README.rst"
repository = "https://github.com/a-recknagel/stenotype"
keywords = ["typing","annotation"]

[tool.poetry.scripts]
stenotype = "stenotype.cli:cli"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-sugar = "^0.9.2"
pytest-cov = "^2.6"
pyfakefs = "^3.6"
mypy = "^0.670.0"
safety = "^1.8"
bandit = "^1.5"
black = {version = "^19",allow-prereleases = true}
sphinx = "^2.0"
sphinx-click = "^2.1"
sphinxcontrib-contentui = "^0.2.4"
sphinx_rtd_theme = "^0.4.3"

[tool.black]
target-version = ["py36"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
